--- a/index.html
+++ b/index.html
@@ -1,16 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles.css" />
     <title>Lection JS</title>
-</head>
+  </head>
 
-<body>
+  <body>
+    <div class="container">
+      <section class="new-car">
+        <form class="addForm js-addForm">
+          <label class="label"
+            >Марка
+            <input type="text" name="make" class="input" />
+          </label>
+          <label class="label"
+            >Модель
+            <input type="text" name="model" class="input" />
+          </label>
+          <label class="label"
+            >Рік
+            <input type="number" name="year" class="input" />
+          </label>
+          <label class="label"
+            >Ціна
+            <input type="number" name="price" class="input" />
+          </label>
+          <label class="label"
+            >Власник
+            <input type="text" name="owner" class="input" />
+          </label>
+          <label class="label"
+            >Інформація
+            <input type="text" name="contactInfo" class="input" />
+          </label>
+          <button type="submit" class="btn">Add new car</button>
+        </form>
+      </section>
+      <section>
+        <ul class="list-car js-list-car"></ul>
+      </section>
+    </div>
 
-    
     <script src="./index.js" type="module"></script>
-</body>
-
+  </body>
 </html>
