--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       </section>
     </div>
 
-    <script src="./index.js" type="module"></script>
+    <!-- <script src="./index.js" type="module"></script> -->
+    <script src="./js-2.js"></script>
   </body>
 </html>
