--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
     </div>
 
     <!-- <script src="./index.js" type="module"></script> -->
-    <script src="./js-2.js"></script>
+    <script src="./js-2.js" type="module"></script>
   </body>
 </html>
